# mobile-robot-estimation-suite

./: .gitignore  LICENSE  README.md  requirements.txt  run.ps1  setup.ps1
Robot_Identification/: .gitignore  README.md  main.py
Robot_Identification/shared_utils/: __init__.py  conversions.py  data_loader.py  kinematics.py  signal_processing.py
Robot_Identification/src/: __init__.py
Robot_Identification/src/examples/: README.md  __init__.py  stage1_experimental.py  stage2_experimental.py  stage3_experimental_vid.py  synthetic_data.py  test_simulation_vidN.py
Robot_Identification/src/identification/: __init__.py  three_stage.py
State Estimation_C/: README.md  build.ps1  clean.ps1  main.c
State Estimation_C/EKF/: ekf.c  ekf.h
State Estimation_C/Examples/: ekf_example.c  pf_example.c  ukf_example.c
State Estimation_C/Headers/: headers.h
State Estimation_C/LinearAlgebra/: angle_utils.c  angle_utils.h  linearalgebra.h
State Estimation_C/PF/: pf.c  pf.h
State Estimation_C/UKF/: ukf.c  ukf.h
State Estimation_C/esp32s3_test/: CMakeLists.txt
State Estimation_C/esp32s3_test/components/linearalgebra/: CMakeLists.txt  angle_utils.h  eye.c  linearalgebra.h
State Estimation_Python/: README.md
State Estimation_Python/docs/: BAYESIAN_FILTERS.md  Q_MATRIX_COMPUTATION.md
State Estimation_Python/examples/: README.md  compare_filters.py  custom_model.py  ekf_omnidirectional.py  example_Q_from_identification.py  example_gp_correction.py  generate_embedded_data.py  pf_omnidirectional.py  trajectory_generators.py  ukf_omnidirectional.py
State Estimation_Python/state_estimation/: __init__.py
Video_Robot_Tracking/: README.md  process_imu_data.py  track_simple_robust.py
data/raw/sensor_data/: exp1.txt  (+4 more)
data/sensors/: exp10.txt  exp3.txt  exp4.txt  exp6.txt  exp9.txt
(+50 files in other folders)
